tests/baselines/reference/restParamModifier.errors.txt
tests/cases/compiler/restParamModifier.ts(2,17): error TS2370: A rest parameter must be of an array type.
tests/cases/compiler/restParamModifier.ts(2,27): error TS1005: '=' expected.
tests/cases/compiler/restParamModifier.ts(2,27): error TS2304: Cannot find name 'rest'.
tests/cases/compiler/restParamModifier.ts(2,31): error TS1005: ',' expected.
tests/cases/compiler/restParamModifier.ts(2,39): error TS1005: '=' expected.


==== tests/cases/compiler/restParamModifier.ts (5 errors) ====
    class C {
        constructor(...public rest: string[]) {}
                    ~~~~~~~~~~~~~~
!!! error TS2370: A rest parameter must be of an array type.
                              ~~~~
!!! error TS1005: '=' expected.
                              ~~~~
!!! error TS2304: Cannot find name 'rest'.
                                  ~
!!! error TS1005: ',' expected.
                                          ~
!!! error TS1005: '=' expected.
    }